# awesome-discord-communities

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTE.md  CONTRIBUTING.md  FAQ.md  LICENSE  Pipfile  README.md  badges.md  main.py  pyproject.toml
.github/ISSUE_TEMPLATE/: issue--exisiting-community.md
data/: community.json
src/: README.md  get_template.py  invalid_invites.py
src/template/: generator.py  icon.py  invalidator.py  metadata.py  parse.py
